# galois

./: .gitignore  Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
galois-kernels/: Cargo.toml
galois-kernels/src/: add.cu  matmul.cu  rms_norm.cu  rope.cu  scale.cu  softmax.cu
kernels/: Cargo.toml
kernels/src/: cpy.cu  lib.rs  matmul.cu  mul.cu  unary.cu
numpy/: numpy_test.py
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/golang.org/x/tools/: gopls@v0.11.0
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/0/x066/763.p/: 208
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/1/260.p/: 203
pkg/sumdb/sum.golang.org/: latest
src/: array.rs  broadcast.rs  cuda.rs  dimension.rs  error.rs  ggml_quants.rs  kernels.rs  lib.rs  macros.rs  matrix.rs  method.rs  op.rs  shape.rs  similarity.rs  tensor.rs  zip.rs
